# learn_pattern

./: db_tables.py  pyproject.toml
learn_pattern/: __init__.py  models.py  repository.py
tests/: conftest.py  test_batches.py  test_practic_obj_val.py  test_repository.py
