[tool.poetry]
name = "learn-pattern"
version = "0.1.0"
description = "Практика по книге - Паттерны разработки на Python: TDD, DDD и событийно-ориентированная архитектура"
authors = ["Ivan Grubov <gruivanvik@mail.ru>"]
readme = "README.md"
packages = [{include = "learn_pattern"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
